- BUFFY
	Barbarian events require Priesthood

Improvements:

- Main Interface
	Unit Plot drawing improvements (pre-work only at the moment)
- City Screen
	Can select which tiles to count in Raw Yields when Civ starts
- Foreign Advisor
	Can select how to display attitudes: numbers, smilies, or both
- Technology Chooser
	Added hover to GP Research icons showing the preferred order

Bug Fixes:

- Strategy Layer
	Fixed random crash on Windows Vista/7
- City Screen
	Happiness and unhappiness are shown for foreign cities
	Whip/Draft Anger is shown for teammates' cities
- Team Games
	WHEOOH works correctly and won't check if a rival will DoW on your teammates or theirs
	Worst Enemy no longer shown for humans' teammates
- Multiplayer OOS Errors
	Changed random "polling error" on F8:MEMBERS tab to use asynchronous RNG
	Changed random unit name generator to use asynchronous RNG
- Scoreboard
	You can always see how many cities your teammates have

MODDING

New Features:

- BUFFY
	Merged BUFFY code into BUG

Improvements:

- Translation
	Split CIV4GameText XML files for Options into individual files matching the Config folder

Bug Fixes:

- BugPath
	Added safeDebugPath() and safeInfoPath() to safely log paths that might contain non-Latin characters


____________________________________________________________________________________________________
BUG 4.2 released November 15th, 2009

CHANGES

New Features:

- SevoPedia
	Technology page shows Civilizations that start with it

Improvements:

- Great Person Progress Bar
	Added hover text displaying full details
- Info Screen [F9]
	Made colors optional on WONDERS list
	Added hover help text to WONDERS tab buttons
- Option Shortcut Reminder
	Message turns itself off the first time you open the Options screen
	If you turn it back on in the System tab, it will remain on as before

Bug Fixes:

- City Screen
	Fixed display of food bar text when city is already over threshold
- Customizable Domestic Advisor